# ChangeLog for media-libs/taglib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/taglib/ChangeLog,v 1.77 2009/11/11 18:35:13 jer Exp $

  11 Nov 2009; Jeroen Roovers <jer@gentoo.org> taglib-1.6.ebuild:
  Stable for HPPA (bug #290487).

  08 Nov 2009; nixnut <nixnut@gentoo.org> taglib-1.6.ebuild:
  ppc stable #290487

*taglib-1.6.1 (05 Nov 2009)

  05 Nov 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +taglib-1.6.1.ebuild, metadata.xml:
  Bumped taglib to the 1.6.1 release.
  Made asf/mp4 support optional.

  03 Nov 2009; Raúl Porcel <armin76@gentoo.org> taglib-1.6.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #290487

  29 Oct 2009; Christian Faulhammer <fauli@gentoo.org> taglib-1.6.ebuild:
  stable x86, bug 290487

  26 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> taglib-1.6.ebuild:
  amd64 stable wrt #290487

  17 Oct 2009; Markus Meier <maekke@gentoo.org> metadata.xml:
  remove static-libs description as it is global now

*taglib-1.6 (02 Oct 2009)

  02 Oct 2009; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +taglib-1.6.ebuild, metadata.xml:
  Bumped taglib to version 1.6 from the kde-testing overlay. Thanks to
  Maciej Mrozowski (reavertm).

  23 Jul 2008; Jeroen Roovers <jer@gentoo.org> taglib-1.5.ebuild:
  Stable for HPPA (bug #230848).

  07 Jul 2008; Raúl Porcel <armin76@gentoo.org> taglib-1.5.ebuild:
  alpha/ia64/sparc stable wrt #230848

  06 Jul 2008; Markus Meier <maekke@gentoo.org> taglib-1.5.ebuild:
  amd64/x86 stable, bug #230848

  05 Jul 2008; Brent Baude <ranger@gentoo.org> taglib-1.5.ebuild:
  stable ppc64, bug 230848

  05 Jul 2008; Brent Baude <ranger@gentoo.org> taglib-1.5.ebuild:
  stable ppc, bug 230848

  20 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/taglib-1.5-gcc43-tests.patch, taglib-1.5.ebuild:
  Add fix to get tests for taglib-1.5 to compile with gcc-4.3. Bug 228413.
  Thanks to Olivier Huber <oli.huber@gmail.com>.
