@@ -3,7 +3,8 @@ DIST taglib-1.5.tar.gz 1394506 RMD160 b591ab074e6b854cbbd0469a36d9d799b252baaf S
 DIST taglib-1.6.1.tar.gz 1104563 RMD160 cb70dee0e93a5da1a5b1208c393d97945c5ce1de SHA1 20d8d95316f084c872e70c9eddc0edd75b75ea09 SHA256 8e752a05e294127336c0c09be3a12542ab7262cdd6db86dfc18529148d1dba44
 DIST taglib-1.6.tar.gz 1098674 RMD160 895788b1f6e6d84f749cd545c107afb174edc4a2 SHA1 2cb5309fa658c695b4ee28a72f85b4d892b63045 SHA256 9aa10e1544a7117d595103addacfdc4e29a055bfbfaa1666faa29990fb7fbd97
 EBUILD taglib-1.5.ebuild 979 RMD160 f9c192159ac742784c2cfd4dabb318f916cf1f1e SHA1 fc65e651d9fd07ea5b15728c074ea875ce19f306 SHA256 6ac0de58d849665713a851f0aec96416f3361caa1d85e0ba45db79ddfee0beb4
+EBUILD taglib-1.6.1-r1.ebuild 1760 RMD160 9cd4df971d6436bafe2d246972ee45d9c8d2be5f SHA1 3afa67bc968108d24e399c8b4fec5a97bbc41645 SHA256 c8849887701e1146996de2163d1874ee9433689692d3b8fcf7913b065ddf048b
 EBUILD taglib-1.6.1.ebuild 1593 RMD160 ad7b41d10ab4bb00861c65d0579abda4b72a0caf SHA1 d102a474e6ee707f8b9add8ab71986a2bd85caa5 SHA256 39a3382c107970d0c193b25ed9b1d4bd128298bc1e5b1633dc25f9d6e823ba5b
-EBUILD taglib-1.6.ebuild 1202 RMD160 c569c47d4adf29bcf7a124c9ec074d0c00633d12 SHA1 bd4fff0274bd541f8d6ef89f5634d89b646efdef SHA256 d6b1f6525ece1ec13c9d5299359e9684e7d860e1b13ae456e43b52e40c38f128
-MISC ChangeLog 9049 RMD160 a0acee852ba890c44ba55b9fc4ff1bf00f5f8969 SHA1 d5c7b6e4933504abad5f3c8dd42af303dbd2cd78 SHA256 948c04d9e65e7441ac2ef187e0dbb3525eea2cca70d2446cb2340cfe81bbb4af
+EBUILD taglib-1.6.ebuild 1205 RMD160 ff702a0b1beb275cbaedeead105da3e80fff3a50 SHA1 5c1c54f2a1f8f2c5a417a229b9450a2310f4568d SHA256 83e8d3758d50b997e56eb00e28e916a0ce58bfcaa9078d9e3bc5484bf8725a02
+MISC ChangeLog 9376 RMD160 1bf2c8ce64e8632af376a115a85d30398c85214f SHA1 947b71703e2982ded055998b8048ee3005971ec2 SHA256 2f8831e0eb9fdc2d5a4d683782da2ffe514e93b823d88dbecc6d22e7861514a1
 MISC metadata.xml 270 RMD160 3c9435147601e664f72ba3634a2baada144c2757 SHA1 83a2d03582fead2d979b68c56ef445b6fbcfd2de SHA256 20290b7aca0034959a15cb56e79df12e3fcd895f2c875db596cb19b97842fecb
